minor cleaning up to follow

--- a/deep_learning/GAN/GAN vanilla.ipynb
+++ b/deep_learning/GAN/GAN vanilla.ipynb
@@ -177,7 +177,18 @@
       "Iter:50000 G_loss: 465944.21875\n",
       "Iter:60000 G_loss: 594337.9375\n",
       "Iter:70000 G_loss: 737870.6875\n",
-      "Iter:80000 G_loss: 896598.0\n"
+      "Iter:80000 G_loss: 896598.0\n",
+      "Iter:90000 G_loss: 1070692.125\n",
+      "Iter:100000 G_loss: 1260147.625\n",
+      "Iter:110000 G_loss: 1464955.875\n",
+      "Iter:120000 G_loss: 1685129.125\n",
+      "Iter:130000 G_loss: 1920668.125\n",
+      "Iter:140000 G_loss: 2171563.0\n",
+      "Iter:150000 G_loss: 2437807.25\n",
+      "Iter:160000 G_loss: 2719399.75\n",
+      "Iter:170000 G_loss: 3016319.75\n",
+      "Iter:180000 G_loss: 3328600.5\n",
+      "Iter:190000 G_loss: 3656202.25\n"
      ]
     }
    ],
