--- a/deep_learning/GAN/GAN vanilla.ipynb
+++ b/deep_learning/GAN/GAN vanilla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -84,65 +84,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def sample_Z(m, n):\n",
-    "    return np.random.uniform(-1.0, 1.0, size=[m, n])\n",
+    "def sample_Z(m, n):                                                             \n",
+    "    return np.random.uniform(-1., 1., size=[m, n])\n",
     "\n",
-    "def generator(Z):\n",
-    "    G_h1 = tf.nn.relu(tf.matmul(Z, G_W1)+G_b1)\n",
-    "    G_log_prob = tf.matmul(G_h1, G_W2)+G_b2\n",
-    "    G_prob = tf.sigmoid(G_log_prob)\n",
-    "    return G_prob\n",
-    "\n",
-    "def discriminator(X):\n",
-    "    D_h1 = tf.nn.relu(tf.matmul(X, D_W1)+D_b1)\n",
-    "    D_logit = tf.matmul(D_h1, D_W2)+D_b2\n",
-    "    D_prob = tf.sigmoid(D_logit)\n",
-    "    return D_prob, D_logit"
+    "def generator(Z):                                                               \n",
+    "    G_h1 = tf.nn.relu( tf.matmul(Z, G_W1)+G_b1 )                                \n",
+    "    G_log_prob = tf.matmul(G_h1, G_W2)+G_b2                                   \n",
+    "    G_prob = tf.nn.sigmoid(G_log_prob)                                                     \n",
+    "    return G_prob                                                               \n",
+    "                                                                        \n",
+    "def discriminator(X):                                                           \n",
+    "    D_h1 = tf.nn.relu( tf.matmul(X, D_W1)+D_b1 )         \n",
+    "    D_logit = tf.matmul(D_h1, D_W2)+D_b2                                      \n",
+    "    D_prob = tf.nn.sigmoid(D_logit)                                             \n",
+    "                                                                                \n",
+    "    return D_prob, D_logit "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "G_sample = generator(Z)\n",
-    "D_real, D_logit_real = discriminator(X)\n",
+    "G_sample = generator(Z)                                                         \n",
+    "D_real, D_logit_real = discriminator(X)                                         \n",
     "D_fake, D_logit_fake = discriminator(G_sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "D_loss_real = tf.reduce_mean(\n",
-    "    tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_real, \n",
-    "                                            targets=tf.ones_like(D_logit_real)))\n",
+    "    tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_real, labels=tf.ones_like(D_logit_real)))\n",
     "D_loss_fake = tf.reduce_mean(\n",
-    "    tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_fake, \n",
-    "                                            targets=tf.zeros_like(D_logit_fake)))\n",
-    "D_loss = D_loss_fake + D_logit_real\n",
+    "    tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_fake, labels=tf.zeros_like(D_logit_fake)))\n",
+    "D_loss = D_loss_real + D_loss_fake \n",
     "\n",
     "G_loss = tf.reduce_mean(\n",
-    "    tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_fake, \n",
-    "                                            targets=tf.ones_like(D_logit_fake)))\n"
+    "    tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_fake, labels=tf.ones_like(D_logit_fake)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -168,27 +166,35 @@
       "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
       "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
       "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
-      "Model restored.\n",
-      "Iter:0 G_loss: 56434.12109375\n",
-      "Iter:10000 G_loss: 107275.484375\n",
-      "Iter:20000 G_loss: 173719.859375\n",
-      "Iter:30000 G_loss: 255676.015625\n",
-      "Iter:40000 G_loss: 353069.28125\n",
-      "Iter:50000 G_loss: 465944.21875\n",
-      "Iter:60000 G_loss: 594337.9375\n",
-      "Iter:70000 G_loss: 737870.6875\n",
-      "Iter:80000 G_loss: 896598.0\n",
-      "Iter:90000 G_loss: 1070692.125\n",
-      "Iter:100000 G_loss: 1260147.625\n",
-      "Iter:110000 G_loss: 1464955.875\n",
-      "Iter:120000 G_loss: 1685129.125\n",
-      "Iter:130000 G_loss: 1920668.125\n",
-      "Iter:140000 G_loss: 2171563.0\n",
-      "Iter:150000 G_loss: 2437807.25\n",
-      "Iter:160000 G_loss: 2719399.75\n",
-      "Iter:170000 G_loss: 3016319.75\n",
-      "Iter:180000 G_loss: 3328600.5\n",
-      "Iter:190000 G_loss: 3656202.25\n"
+      "Iter:0 G_loss: 2.2089664936065674\n",
+      "Iter:10000 G_loss: 4.761900424957275\n",
+      "Iter:20000 G_loss: 2.649146556854248\n",
+      "Iter:30000 G_loss: 2.6667377948760986\n",
+      "Iter:40000 G_loss: 2.868349313735962\n",
+      "Iter:50000 G_loss: 3.03558349609375\n",
+      "Iter:60000 G_loss: 3.073139190673828\n",
+      "Iter:70000 G_loss: 3.570329427719116\n",
+      "Iter:80000 G_loss: 2.701941967010498\n",
+      "Iter:90000 G_loss: 2.5218796730041504\n",
+      "Iter:100000 G_loss: 3.2024054527282715\n",
+      "Iter:110000 G_loss: 2.662503480911255\n",
+      "Iter:120000 G_loss: 3.133331298828125\n",
+      "Iter:130000 G_loss: 3.053745746612549\n",
+      "Iter:140000 G_loss: 3.3171310424804688\n",
+      "Iter:150000 G_loss: 3.196390151977539\n",
+      "Iter:160000 G_loss: 3.2536442279815674\n",
+      "Iter:170000 G_loss: 3.504542827606201\n",
+      "Iter:180000 G_loss: 3.3438353538513184\n",
+      "Iter:190000 G_loss: 3.1465351581573486\n",
+      "Iter:200000 G_loss: 3.4816670417785645\n",
+      "Iter:210000 G_loss: 3.5517475605010986\n",
+      "Iter:220000 G_loss: 3.652977466583252\n",
+      "Iter:230000 G_loss: 4.375487804412842\n",
+      "Iter:240000 G_loss: 3.8639779090881348\n",
+      "Iter:250000 G_loss: 3.7972588539123535\n",
+      "Iter:260000 G_loss: 3.5712928771972656\n",
+      "Iter:270000 G_loss: 3.61924147605896\n",
+      "Iter:280000 G_loss: 4.23785400390625\n"
      ]
     }
    ],
@@ -198,7 +204,8 @@
     "\n",
     "mb_size = 128                                                                   \n",
     "Z_dim = 100  \n",
-    "                                                                                                    \n",
+    "k = 1\n",
+    "\n",
     "if not os.path.exists('out/'):                                                  \n",
     "    os.makedirs('out/')  \n",
     "\n",
@@ -219,18 +226,18 @@
     "        \n",
     "    # Do some work with the model.                                               \n",
     "    i = 0                                                                                                                                                        \n",
-    "    for it in range(200000):                                                       \n",
-    "        if it % 1000 == 0:                                                          \n",
+    "    for it in range(1000000):                                                       \n",
+    "        if it % 2000 == 0:                                                          \n",
     "            samples = sess.run(G_sample, feed_dict={Z: sample_Z(16, Z_dim)})        \n",
     "\n",
     "            fig = plot(samples)                                                     \n",
     "            plt.savefig('out/{}.png'.format(str(i).zfill(3)), bbox_inches='tight')  \n",
     "            i += 1                                                                  \n",
     "            plt.close(fig)                                                          \n",
-    "\n",
-    "        X_mb, _ = mnist.train.next_batch(mb_size)                                   \n",
-    "\n",
-    "        _, D_loss_curr = sess.run([D_solver, D_loss], feed_dict={X: X_mb, Z: sample_Z(mb_size, Z_dim)})\n",
+    "        \n",
+    "        for step in range(k):\n",
+    "            X_mb, _ = mnist.train.next_batch(mb_size)                                   \n",
+    "            _, D_loss_curr = sess.run([D_solver, D_loss], feed_dict={X: X_mb, Z: sample_Z(mb_size, Z_dim)})\n",
     "        _, G_loss_curr = sess.run([G_solver, G_loss], feed_dict={Z: sample_Z(mb_size, Z_dim)})\n",
     "\n",
     "        if it % 10000 == 0:                                                          \n",
