--- a/deep_learning/Basics/Momentum.ipynb
+++ b/deep_learning/Basics/Momentum.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classical Momentum\n",
+    "\n",
+    "* https://en.wikipedia.org/wiki/Stochastic_gradient_descent#Momentum\n",
+    "\n",
+    "Classical moentum is a technique for accelerating gradient descent that accumulates a velocity vector in the directions of persistent reduction in the objective across iterations.\n",
+    "Given an objective function $f(\\theta )$, classical momentum is given by:\n",
+    "$$ v_{t+1} = \\mu v_t - \\epsilon \\nabla f(\\theta_t )$$\n",
+    "$$ \\theta_{t+1} = \\theta_t + v_{t+1}$$\n",
+    "\n",
+    "where $\\epsilon > 0$ is the learning rate, $\\mu \\in [0,1]$ is the momentum coeficient, and $\\nabla f(\\theta_t )$ is the gradient at $\\theta_t$. \n",
+    "\n",
+    "Based on the Heavy ball method (Polyak 1964). The iterations of gradient descent tend to bounce between the walls of narrow valleys - objective surface. \n",
+    "To avoid bouncing from wall to wall we add a momentum term to the gradient step. This term nudges the next iteration ($W$) in the direction of the previous steps.\n",
+    "\n",
+    "$$ x^{n+1} = x^n - \\alpha P(x^n) + \\beta (x^n - x^{n-1})$$\n",
+    "\n",
+    "modify the velocity of the point in weight space.\n",
+    "\n",
+    "# Nesterov Momentum\n",
+    "\n",
+    "* [Nesterov's Accelerated Gradient Descent](https://blogs.princeton.edu/imabandit/2013/04/01/acceleratedgradientdescent/)\n",
+    "* [Revisiting Nesterov's Acceleration](https://blogs.princeton.edu/imabandit/2015/06/30/revisiting-nesterovs-acceleration/)\n",
+    "\n",
+    "$$ v_{t+1} = \\mu v_t - \\epsilon \\nabla f(\\theta_t + \\mu v_t ) $$\n",
+    "$$ \\theta_{t+1} = \\theta_t + v_{t+1} $$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 117,
    "metadata": {
