--- a/deep_learning/GAN/GAN vanilla.ipynb
+++ b/deep_learning/GAN/GAN vanilla.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -194,7 +194,79 @@
       "Iter:250000 G_loss: 3.7972588539123535\n",
       "Iter:260000 G_loss: 3.5712928771972656\n",
       "Iter:270000 G_loss: 3.61924147605896\n",
-      "Iter:280000 G_loss: 4.23785400390625\n"
+      "Iter:280000 G_loss: 4.23785400390625\n",
+      "Iter:290000 G_loss: 4.016030788421631\n",
+      "Iter:300000 G_loss: 3.571878433227539\n",
+      "Iter:310000 G_loss: 3.575427532196045\n",
+      "Iter:320000 G_loss: 3.91756272315979\n",
+      "Iter:330000 G_loss: 4.172358512878418\n",
+      "Iter:340000 G_loss: 4.25956916809082\n",
+      "Iter:350000 G_loss: 3.518691062927246\n",
+      "Iter:360000 G_loss: 4.146821022033691\n",
+      "Iter:370000 G_loss: 4.362159729003906\n",
+      "Iter:380000 G_loss: 4.162553310394287\n",
+      "Iter:390000 G_loss: 4.933387756347656\n",
+      "Iter:400000 G_loss: 5.006468296051025\n",
+      "Iter:410000 G_loss: 4.644428730010986\n",
+      "Iter:420000 G_loss: 4.630936622619629\n",
+      "Iter:430000 G_loss: 5.002253532409668\n",
+      "Iter:440000 G_loss: 4.486642837524414\n",
+      "Iter:450000 G_loss: 5.431328773498535\n",
+      "Iter:460000 G_loss: 4.2914934158325195\n",
+      "Iter:470000 G_loss: 4.210569381713867\n",
+      "Iter:480000 G_loss: 4.261239528656006\n",
+      "Iter:490000 G_loss: 5.386993408203125\n",
+      "Iter:500000 G_loss: 5.135983467102051\n",
+      "Iter:510000 G_loss: 4.69680118560791\n",
+      "Iter:520000 G_loss: 5.120851516723633\n",
+      "Iter:530000 G_loss: 5.538848400115967\n",
+      "Iter:540000 G_loss: 5.194281578063965\n",
+      "Iter:550000 G_loss: 5.568328380584717\n",
+      "Iter:560000 G_loss: 5.4488935470581055\n",
+      "Iter:570000 G_loss: 4.822822093963623\n",
+      "Iter:580000 G_loss: 4.816188812255859\n",
+      "Iter:590000 G_loss: 4.306694984436035\n",
+      "Iter:600000 G_loss: 4.6638503074646\n",
+      "Iter:610000 G_loss: 4.531159400939941\n",
+      "Iter:620000 G_loss: 5.355362892150879\n",
+      "Iter:630000 G_loss: 5.037649154663086\n",
+      "Iter:640000 G_loss: 4.984794616699219\n",
+      "Iter:650000 G_loss: 4.757326126098633\n",
+      "Iter:660000 G_loss: 5.381075382232666\n",
+      "Iter:670000 G_loss: 4.876745223999023\n",
+      "Iter:680000 G_loss: 3.2919840812683105\n",
+      "Iter:690000 G_loss: 3.3005614280700684\n",
+      "Iter:700000 G_loss: 3.931454658508301\n",
+      "Iter:710000 G_loss: 3.442124366760254\n",
+      "Iter:720000 G_loss: 3.6490650177001953\n",
+      "Iter:730000 G_loss: 3.6662774085998535\n",
+      "Iter:740000 G_loss: 4.012195110321045\n",
+      "Iter:750000 G_loss: 3.846247673034668\n",
+      "Iter:760000 G_loss: 3.499256134033203\n",
+      "Iter:770000 G_loss: 3.833892345428467\n",
+      "Iter:780000 G_loss: 4.580238342285156\n",
+      "Iter:790000 G_loss: 4.930992603302002\n",
+      "Iter:800000 G_loss: 3.845717668533325\n",
+      "Iter:810000 G_loss: 4.844306468963623\n",
+      "Iter:820000 G_loss: 4.398834705352783\n",
+      "Iter:830000 G_loss: 4.795402526855469\n",
+      "Iter:840000 G_loss: 5.434116363525391\n",
+      "Iter:850000 G_loss: 5.06354284286499\n",
+      "Iter:860000 G_loss: 4.835237503051758\n",
+      "Iter:870000 G_loss: 5.3096513748168945\n",
+      "Iter:880000 G_loss: 5.435133934020996\n",
+      "Iter:890000 G_loss: 5.435033798217773\n",
+      "Iter:900000 G_loss: 5.223750591278076\n",
+      "Iter:910000 G_loss: 5.893792152404785\n",
+      "Iter:920000 G_loss: 5.3689866065979\n",
+      "Iter:930000 G_loss: 6.0590362548828125\n",
+      "Iter:940000 G_loss: 5.20387077331543\n",
+      "Iter:950000 G_loss: 6.290043354034424\n",
+      "Iter:960000 G_loss: 5.339044570922852\n",
+      "Iter:970000 G_loss: 5.874585151672363\n",
+      "Iter:980000 G_loss: 5.550515651702881\n",
+      "Iter:990000 G_loss: 5.683978080749512\n",
+      "Model saved in file: model\n"
      ]
     }
    ],
