--- a/supervised_learning/Basics/Linear_Regression.ipynb
+++ b/supervised_learning/Basics/Linear_Regression.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* **Linear decision boundaries:** The dataset comes from a Multivariate (K) Gaussian distribution with uncorrelated components and different means.\n",
+    "\n",
+    "* Dataset for each class comes from a mixture of low-variance Gaussian distributions, with individual means themselves distributed as Gaussians.\n",
+    "\n",
+    "\n",
+    "LR gives a linear decision boundary (surprise!) -> **potentially high bias and low variance**.\n",
+    "\n",
+    "This model works best for datasets generated from Multivariate Gaussian distributions with uncorrelated components and different means."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Simple Linear Regression"
    ]
   },
@@ -40,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -119,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -163,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -186,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +242,7 @@
     "\\hat{Y} = X^T \\hat{\\beta}\n",
     "$$\n",
     "\n",
-    "We can interpret our model as a function over a $p$-dimensional input space, $f(X) = X^T \\hat{\\beta}$ with its gradient $f\\prime (X) = \\hat{\\beta} $.\n",
+    "We can interpret our model as a function over a $p$-dimensional input space, $f(X) = X^T \\hat{\\beta}$ with its gradient $f^{\\prime} (X) = \\hat{\\beta} $.\n",
     "$\\beta$ (we are dropping the hat) is thus a vector in input space that points in the steepest uphill direction.\n",
     "\n",
     "To fit the linear model to a dataset we will use the method of least squares.\n",
@@ -253,6 +267,114 @@
     "$$\n",
     "\\hat{\\beta} = (\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T\\mathbf{y}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Stochastic Gradient Descent for Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def predict(row, coefficients):\n",
+    "    yhat = coefficients[0]\n",
+    "    for i in range(len(row)-1):\n",
+    "        yhat += coefficients[i+1] * row[i]\n",
+    "    return yhat\n",
+    "\n",
+    "def coefficients_sgd(train, l_rate, n_epoch):\n",
+    "    coef = [0.0 for i in range(len(train[0]))]\n",
+    "    for epoch in range(n_epoch):\n",
+    "        sum_error = 0.0\n",
+    "        for row in train:\n",
+    "            yhat = predict(row, coef)\n",
+    "            error = yhat - row[-1]\n",
+    "            sum_error += error**2.0\n",
+    "            # updates \n",
+    "            coef[0] = coef[0] - l_rate * error\n",
+    "            for i in range(len(row)-1):\n",
+    "                coef[i+1] = coef[i+1] - l_rate * error * row[i]\n",
+    "    return coef\n",
+    "\n",
+    "def linear_regression_sgd(train, test, l_rate, n_epoch):                        \n",
+    "    predictions = []                                                    \n",
+    "    coef = coefficients_sgd(train, l_rate, n_epoch)                         \n",
+    "    for row in test:                                                        \n",
+    "        yhat = predict(row, coef)                                       \n",
+    "        predictions.append(yhat)                                        \n",
+    "    return(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def evaluate_algorithm(dataset, algorithm, n_folds, *args):                     \n",
+    "    folds = cross_validation_split(dataset, n_folds)                        \n",
+    "    scores = []                                                         \n",
+    "    for fold in folds:                                                      \n",
+    "        train_set = list(folds)                                         \n",
+    "        train_set.remove(fold)                                          \n",
+    "        train_set = sum(train_set, [])                                  \n",
+    "        test_set = list()                                               \n",
+    "        for row in fold:                                                \n",
+    "            row_copy = list(row)                                    \n",
+    "            test_set.append(row_copy)                               \n",
+    "            row_copy[-1] = None                                     \n",
+    "        predicted = algorithm(train_set, test_set, *args)               \n",
+    "        actual = [row[-1] for row in fold]                              \n",
+    "        rmse = rmse_metric(actual, predicted)                           \n",
+    "        scores.append(rmse)                                             \n",
+    "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [0.12799871928083031, 0.12495030020491166, 0.12225645975212905, 0.12914294667502924, 0.12603189216806354]\n",
+      "Mean RMSE: 0.126\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Getting_Started import load_csv, str_column_to_float, normalize_dataset, cross_validation_split\n",
+    "\n",
+    "filename = '../datasets/winequality-white.csv'                                              \n",
+    "dataset = load_csv(filename)                                                    \n",
+    "for i in range(len(dataset[0])):                                                \n",
+    "    str_column_to_float(dataset, i)                                         \n",
+    "# normalize                                                                                                                     \n",
+    "dataset = normalize_dataset(dataset)\n",
+    "\n",
+    "# evaluate algorithm                                                            \n",
+    "n_folds = 5                                                                     \n",
+    "l_rate = 0.01                                                                   \n",
+    "n_epoch = 50                                                                    \n",
+    "scores = evaluate_algorithm(dataset, linear_regression_sgd, n_folds, l_rate, n_epoch)\n",
+    "print('Scores: %s' % scores)                                                    \n",
+    "print('Mean RMSE: %.3f' % (sum(scores)/float(len(scores)))) "
    ]
   },
   {
