removed splitoption for fitting

--- a/deep_learning/Basics/TF_dropout.ipynb
+++ b/deep_learning/Basics/TF_dropout.ipynb
@@ -83,18 +83,18 @@
     "        self.dropout_rates = p_keep\n",
     "        \n",
     "    def fit(self, X, Y, lr=1.0e-3, decay=0.999, momentum=0.9, epochs=300, batch_size=300, \n",
-    "            split=True, print_period=50):\n",
+    "            print_period=50):\n",
     "        # model validation\n",
     "        X, Y = sk.utils.shuffle(X, Y)\n",
     "        X = X.astype(np.float32)\n",
     "        K = len(set(Y))\n",
-    "        if split:\n",
-    "            Xtrain = X[:-1000,]                                                         \n",
-    "            Ytrain = Y[:-1000]                                                          \n",
-    "            Xtest  = X[-1000:,]                                                         \n",
-    "            Ytest  = Y[-1000:]                                                          \n",
-    "            Ytrain_ind = ANN.y2indicator(Ytrain, K=K)                                            \n",
-    "            Ytest_ind = ANN.y2indicator(Ytest, K=K)\n",
+    "\n",
+    "        Xtrain = X[:-1000,]                                                         \n",
+    "        Ytrain = Y[:-1000]                                                          \n",
+    "        Xtest  = X[-1000:,]                                                         \n",
+    "        Ytest  = Y[-1000:]                                                          \n",
+    "        Ytrain_ind = ANN.y2indicator(Ytrain, K=K)                                            \n",
+    "        Ytest_ind = ANN.y2indicator(Ytest, K=K)\n",
     "            \n",
     "        # Initialize hidden layers\n",
     "        N, D = Xtrain.shape\n",
@@ -139,7 +139,8 @@
     "                    session.run(train_op, feed_dict={inputs: Xbatch, labels_ind: Ybatch})\n",
     "                    \n",
     "                if i % print_period == 0:\n",
-    "                    test_cost = session.run(cost, feed_dict={inputs: Xtest, labels_ind: Ytest_ind})\n",
+    "                    test_cost = session.run(cost, \n",
+    "                                            feed_dict={inputs: Xtest, labels_ind: Ytest_ind})\n",
     "                    predictions = session.run(prediction, feed_dict={inputs: Xtest})\n",
     "                    costs.append(test_cost)\n",
     "                    err = ANN.error(predictions, Ytest)\n",
