fixed arguments for training

--- a/deep_learning/Basics/TF_dropout.ipynb
+++ b/deep_learning/Basics/TF_dropout.ipynb
@@ -120,8 +120,8 @@
     "        \n",
     "        cost = tf.reduce_mean(\n",
     "            tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=labels_ind))\n",
-    "        #train_op = tf.train.GradientDescentOptimizer(0.001).minimize(cost)\n",
-    "        #train_op = tf.train.MomentumOptimizer(lr, momentum=mu).minimize(cost)\n",
+    "        #train_op = tf.train.GradientDescentOptimizer(lr).minimize(cost)\n",
+    "        #train_op = tf.train.MomentumOptimizer(lr, momentum=momentum).minimize(cost)\n",
     "        train_op = tf.train.RMSPropOptimizer(lr, decay=decay, momentum=momentum).minimize(cost)\n",
     "        prediction = self.predict(inputs)\n",
     "        \n",
