--- a/deep_learning/CNN/convolutions.ipynb
+++ b/deep_learning/CNN/convolutions.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -45,14 +45,14 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Audio('../datasets/cnn_examples/helloworld.wav')\n",
-    "Audio"
+    "Audio('https://raw.githubusercontent.com/lazyprogrammer/machine_learning_examples/master/cnn_class/helloworld.wav')"
    ]
   },
   {
