--- a/deep_learning/CNN/convolutions.ipynb
+++ b/deep_learning/CNN/convolutions.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -123,17 +123,16 @@
    ],
    "source": [
     "delta = np.array([1.0, 0.0, 0.0])\n",
-    "noecho = np.convolve(signal, delta)\n",
+    "noecho = np.convolve(signal, delta).astype(np.int16)\n",
     "print('noecho signal: ', noecho.shape)\n",
     "assert(np.abs(noecho[:len(signal)] - signal).sum() < 0.000001)\n",
     "\n",
-    "noecho = noecho.astype(np.int16)\n",
     "write('noecho.wav', 16000, noecho)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -153,7 +152,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +182,7 @@
     "filt[8000] = 0.3\n",
     "filt[12000] = 0.2\n",
     "filt[15999] = 0.1\n",
-    "out = np.convolve(signal, filt)\n",
+    "out = np.convolve(signal, filt).astype(np.int16)\n",
     "\n",
     "out = out.astype(np.int16)\n",
     "write('out.wav', 16000, out)"
